--- a/archivo.scss
+++ b/archivo.scss
@@ -1,318 +1,10 @@
-/* MIXINS GENÉRICOS */
-/* ANCHO Y ALTURA */
-@mixin sizes($width, $height){
-    width: $width;
-    height: $height;
-}
+// Modules and Variables
+@import "partials/base";
 
-/* DISPLAY FLEX */
-@mixin displayFlex($displayFlex, $flexDirection, $flexWrap){
-    display: $displayFlex;
-    flex-direction: $flexDirection;
-    flex-wrap: $flexWrap;
-}
-
-/* FUENTE */
-@mixin fuente($fontSize,$fontFamily,$color,$backgroundColor){
-    font-size: $fontSize;
-    font-family: $fontFamily;
-    color: $color;
-    background-color: $backgroundColor;
-}
-
-/* VARIABLES GENÉRICAS */
-/* COLORES */
-$colorVerdeClaro:#748e81;
-$colorVerdeIntermedio: #4F7375;
-$colorVerdeOscuro: #274442;
-$colorBlanco:#ffffff;
-$colorNegro: #333333;
-$colorBeige: #e9e5e3;
-
-/* FUENTES */
-$fuenteBasica: ("Open Sans", "Roboto Slab", "Lora", sans-serif);
-$fuenteTitulos: (Arial, Helvetica, sans-serif);
-$fuenteOriginal: ('Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif);
-$fuenteSecundaria: ('Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif);
-
-/* RESET */
-* {
-    margin:0;
-    padding:0;
-}
-
-/* GLOBALES */
-.body {
-    @include fuente(16px,$fuenteBasica,$colorNegro,$colorBeige);
-    display: grid;
-    grid-template-rows: repeat(3,auto);
-    box-sizing: border-box;
-}
-
-/* HEADER */
-.header {
-    @include displayFlex(flex,row,wrap);
-    grid-row: 1;
-        img{
-            @include sizes(300px,102px);
-            display: inline;
-            padding-left: 2.5rem;
-        }
-}
-
-/* MENU PRINCIPAL */
-.navegacionPrincipal {
-    @include displayFlex(flex,row,nowrap);
-    align-items: flex-end;
-    margin: 2rem auto;
-    list-style-type: none; 
-    text-align: center;
-        ul li {
-            @include displayFlex(flex,column,wrap);
-            background-color: $colorVerdeClaro;
-            padding-left: 2rem;
-            padding-right: 2rem;
-                a {
-                    display: block;
-                    text-decoration: none;
-                    font-size: 1rem;
-                    line-height: 1.5rem;
-                    color: $colorBlanco;
-                }
-                a:active {
-                    color: $colorBeige;
-                }
-            }
-    }    
-
-/* MAIN */
-.main {
-    grid-row: 2;
-}
-
-/* FOOTER */
-.footer{
-    grid-row: 3;
-    display: inline-block;
-    position: relative;
-        td {
-            text-align: left;
-        }
-} 
-
-.logoImagen {
-  @include sizes(180px,161px); 
-  animation-name: aparecer;  
-  animation-duration: 10s; 
-  animation-iteration-count: infinite;
-}
-
-@keyframes aparecer {
-    0% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-    }
-}
-
-.icono {
-    @include sizes(15px,15px);
-}
-
-/* TITULOS Y TEXTOS*/ 
-h1{
-    @include fuente(2.5rem,$fuenteOriginal,$colorVerdeOscuro,none);
-    text-decoration: none;
-    position: relative;
-    text-align:center;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
-}
-
-h2{
-    @include fuente(2rem,$fuenteTitulos,$colorBeige,$colorVerdeOscuro);
-    position: relative;
-    text-align:center;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-}
-
-h3{
-    @include fuente(1.5rem,$fuenteSecundaria,$colorBeige,$colorVerdeIntermedio);
-    text-transform: uppercase;
-    position: relative;
-    text-align:center;
-    margin-top: 5rem;
-    margin-bottom: 2rem;
-}
-
-
-h4{
-    @include fuente(1rem,$fuenteOriginal,$colorVerdeClaro,none);
-    position: relative;
-    text-align:left;
-    margin-top: 0.5rem;
-    margin-bottom: 0.5rem;
-}
-
-a{
-    @include fuente(auto,$fuenteSecundaria,$colorNegro,none);
-    text-decoration: none;
-    position: relative;
-    text-align:center;
-}
-
-p{
-   display: inline-block;
-   font-family: $fuenteSecundaria;
-   position: relative;
-}
-
-/*** ESPECIFICOS POR PAGINA ***/
-/** INDEX **/
-/* VIDEO PRESENTACION */
-#logoVideo {
-    @include sizes(100vw,300px);
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-}
-
-.fotoPrenda {
-    @include sizes(266px,400px);
-}
-
-/** MISION **/
-/* MAIN MISION */
-#mainMision {
-    @include displayFlex(flex,column,wrap);
-    justify-content:space-between;
-}
-
-/* SECCIONES */
-#sobreMarca{
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    align-self: center;
-    text-align: center;
-    margin-top: 1rem;
-    margin-bottom: 2rem;
-    background-color: $colorVerdeClaro;
-    padding: 2rem;
-    border-radius: 25px;
-    border: 5px solid;
-        p{
-            color: $colorBlanco;
-        }
-}
-
-#sobreManuela{
-    @include displayFlex(flex,row,wrap);
-    align-content: stretch;
-    justify-content: center;
-        p{
-            margin-left: 30px;
-            margin-right: 30px;
-            margin-bottom: 30px;
-        }
-}
-
-#imgSobreManuela{
-    display: inline;
-    margin-top: 1rem;
-    margin-bottom: 2rem;
-    border-radius: 25px;
-}
-
-/** PRENDAS **/
-/* MENU SECUNDARIO */
-.navegacionSecundaria {
-    @include sizes(100%,auto);
-    margin: 1rem auto;
-    list-style-type: none; 
-    text-align: center;
-    font-size: 0;
-        li a {
-            display: block;
-            text-decoration: none;
-            font-size: 1.0rem;
-            line-height: 1.5rem;
-            color: $colorBlanco;
-            border-color: $colorBlanco;
-            border-width: 10rem;
-        }
-}
-
-.navegacionSecundaria > ul li {
-    @include sizes(20%,auto);
-    display: inline-block;
-    position: relative;
-    background-color: $colorVerdeOscuro;
-}
-
-/* SECCIONES */
-.prendas{
-    @include displayFlex(flex,row,wrap);
-    align-content: stretch;
-    justify-content: center;
-        div{
-            align-content: center;
-            padding-bottom: 1rem;
-            padding-left: 1rem;
-            padding-right: 0.5rem;
-            justify-content: center;
-        }
-        a{
-            display: block;
-            align-self: center;
-            padding-top: 0.3rem;
-        }
-        a:hover{
-            @include fuente(auto,auto,$colorBlanco,$colorVerdeOscuro);
-        }
-        img{
-            display: block;
-            align-self: center;
-        }
-}
-
-/** CONTACTO **/
-/* FORMULARIO */
-.formularioAgenda{
-    display: block;
-    text-align: center;
-    padding-top: 20px;
-    padding-bottom: 10px;
-}
-
-/* CAMBIOS PARA PANTALLA MONITOR */
-@media (min-width: 576px){
-    /* MENU PRINCIPAL */
-    .navegacionPrincipal ul li{
-        display: inline-block;
-    }
-
-    /*** ESPECIFICOS POR PAGINA ***/
-    /** MISION **/
-    /* SECCIONES */
-    #sobreManuela{
-        flex-wrap: nowrap;
-            p{
-                margin-left: 15px;
-                margin-right: 200px;
-                margin-top: 80px;
-            }
-    }
-    
-    #imgSobreManuela{
-        margin-left: 200px;
-    }
-    
-    /** PRENDAS **/
-    /* MENU SECUNDARIO */
-    .navegacionSecundaria {
-        @include sizes(60%,auto);
-    }
-}
+// Partials
+@import "partials/reset";
+@import "partials/block";
+@import "partials/text";
+@import "partials/specific.scss";
+@import "partials/responsive.scss";
 
