--- a/estilo.css
+++ b/estilo.css
@@ -1,9 +1,9 @@
 @charset "UTF-8";
-/* MIXINS GENÉRICOS */
+/** MIXINS GENÉRICOS **/
 /* ANCHO Y ALTURA */
 /* DISPLAY FLEX */
 /* FUENTE */
-/* VARIABLES GENÉRICAS */
+/** VARIABLES GENÉRICAS **/
 /* COLORES */
 /* FUENTES */
 /* RESET */
@@ -63,7 +63,13 @@
   color: #ffffff;
 }
 .navegacionPrincipal ul li a:active {
-  color: #e9e5e3;
+  text-decoration: underline;
+}
+.navegacionPrincipal ul li:hover {
+  background-color: #274442;
+}
+.navegacionPrincipal ul li:active {
+  background-color: #274442;
 }
 
 /* MAIN */
@@ -73,9 +79,13 @@
 
 /* FOOTER */
 .footer {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
   grid-row: 3;
-  display: inline-block;
-  position: relative;
+  background-color: #a3bab4;
+  margin-top: 10%;
+  padding-bottom: 10%;
 }
 .footer td {
   text-align: left;
@@ -84,6 +94,7 @@
 .logoImagen {
   width: 180px;
   height: 161px;
+  margin-left: 10%;
   animation-name: aparecer;
   animation-duration: 10s;
   animation-iteration-count: infinite;
@@ -97,9 +108,14 @@
     opacity: 1;
   }
 }
+.infoFooter {
+  margin-left: 10%;
+}
+
 .icono {
   width: 15px;
   height: 15px;
+  border-radius: 25px;
 }
 
 /* TITULOS Y TEXTOS*/
@@ -113,6 +129,15 @@ h1 {
   text-align: center;
   margin-top: 2rem;
   margin-bottom: 2rem;
+}
+
+h1:hover {
+  color: #e9e5e3;
+  background-color: #a3bab4;
+}
+
+h1:active {
+  text-decoration: underline;
 }
 
 h2 {
@@ -141,7 +166,7 @@ h3 {
 h4 {
   font-size: 1rem;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
-  color: #748e81;
+  color: #333333;
   background-color: none;
   position: relative;
   text-align: left;
@@ -169,7 +194,7 @@ p {
 /** INDEX **/
 /* VIDEO PRESENTACION */
 #logoVideo {
-  width: 100vw;
+  width: 100%;
   height: 300px;
   margin-top: 1rem;
   margin-bottom: 1rem;
@@ -236,6 +261,7 @@ p {
   list-style-type: none;
   text-align: center;
   font-size: 0;
+  border-radius: 20px;
 }
 .navegacionSecundaria li a {
   display: block;
@@ -245,6 +271,12 @@ p {
   color: #ffffff;
   border-color: #ffffff;
   border-width: 10rem;
+}
+.navegacionSecundaria li a:hover {
+  background-color: #748e81;
+}
+.navegacionSecundaria li a:active {
+  text-decoration: underline;
 }
 
 .navegacionSecundaria > ul li {
@@ -273,11 +305,12 @@ p {
 .prendas a {
   display: block;
   align-self: center;
-  padding-top: 0.3rem;
+  margin-top: 2%;
+  border-radius: 25px;
 }
 .prendas a:hover {
   font-size: auto;
-  font-family: auto;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   color: #ffffff;
   background-color: #274442;
 }
@@ -286,7 +319,7 @@ p {
   align-self: center;
 }
 
-/** CONTACTO **/
+/** AGENDA **/
 /* FORMULARIO */
 .formularioAgenda {
   display: block;
@@ -295,11 +328,50 @@ p {
   padding-bottom: 10px;
 }
 
+/** CONTACTO **/
+/* MAPA */
+.mapa {
+  display: flex;
+  justify-content: center;
+}
+.mapa iframe {
+  width: 90vw;
+  height: 450px;
+}
+
+.red {
+  display: flex;
+  flex-direction: row;
+  margin-left: 20%;
+  margin-top: 1%;
+}
+.red a {
+  margin-left: 1%;
+  margin-top: 1%;
+}
+
+.iconoGrande {
+  width: 30px;
+  height: 30px;
+  border-radius: 25px;
+}
+
 /* CAMBIOS PARA PANTALLA MONITOR */
 @media (min-width: 576px) {
   /* MENU PRINCIPAL */
   .navegacionPrincipal ul li {
     display: inline-block;
+  }
+  /* FOOTER */
+  .footer {
+    grid-template-columns: 1fr 3fr;
+  }
+  .logoImagen {
+    grid-column: 1;
+  }
+  .infoFooter {
+    grid-column: 2;
+    margin-top: 2%;
   }
   /*** ESPECIFICOS POR PAGINA ***/
   /** MISION **/
